--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Jekyll with Forestry
-email: bob@aol.com
+email: stevenleabo at gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A jekyll blog site deployed with Forestry. This allows a CMS that pushes blog content with a GUI to a static jekyll website.
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: ShadowStackLLC
+github_username:  leabs
 
 
 
